Quick fix for gnome 3.36 compatibility: icon size and alignment fix

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,25 +1,19 @@
 
 .panel-status-menu-hbox{
-  font-size: 17px;
+  font-size: 15px;
   border-radius: 5px;
-  padding: 1px;
-  margin-bottom: 0px;
 }
 
 .panel-status-menu-hbox-connected{
   background-color: rgba(10,130,10,0.6);
   border-radius: 5px;
-  font-size: 17px;
-  padding: 1px;
-  margin-bottom: 2px;
+  font-size: 15px;
 }
 
 .panel-status-menu-hbox-problem{
   background-color: rgba(200,150,30,0.6);
   border-radius: 5px;
-  font-size: 17px;
-  padding: 1px;
-  margin-bottom: 2px;
+  font-size: 15px;
 }
 
 .label-nvpn-panel{
@@ -51,6 +45,11 @@
 .sub-menu-btn{
   margin-left:10px;
   margin-right: 10px;
+  padding: 3px;
+}
+
+.sub-menu-btn:hover{
+  background-color: rgba(255, 255, 255, 0.25);
 }
 
 .group-selected{
@@ -128,20 +127,28 @@
 }
 
 
+.nvpn-submenu-icon{
+  icon-size: 15px;
+}
+
+
 .opt-switcher-btn{
   font-size: 13px;
   padding-top: 4px;
   padding-bottom: 4px;
   padding-left: 12px;
   padding-right: 12px;
+  background-color: rgba(0, 0, 0, 0.10);
 }
 
 .opt-switcher-btn:hover,
 .opt-switcher-btn:focus {
+  color: white;
   padding-top: 4px;
   padding-bottom: 4px;
   padding-left: 12px;
   padding-right: 12px;
+  background-color: rgba(255, 255, 255, 0.25);
 }
 
 .nordvpn-version-warn{
@@ -174,10 +181,12 @@
 
 .add-fav-button{
   padding: 5px;
+  background-color: rgba(0,0,0,0.1);
 }
 
 .add-fav-button:hover{
-  padding: 6px;
+  color: white;
+  background-color: rgba(255,255,255,0.1);
 }
 
 .server-fav, .recent-location{
